Enum system_role {
  SYSTEM_ADMIN
  USER
}

Enum group_role {
  OWNER
  MODERATOR
  MEMBER
}

Enum queue_status {
  WAITING
  PASSED
  SKIPPED
}

Enum notification_type {
  SYSTEM
  QUEUE
}

Enum notification_status {
  PENDING
  SENT
  READ
}

Table users {
  user_id uuid [pk]
  email varchar(255) [not null, unique]
  password_hash varchar(255) [not null]
  first_name varchar(100) [not null]
  last_name varchar(100) [not null]
  role system_role [not null]
  created_at timestamp [not null]
  is_active boolean [not null]
}

Table groups {
  group_id uuid [pk]
  name varchar(255) [not null]
  description text
  created_by uuid [not null]
  created_at timestamp [not null]
}

Table group_members {
  group_member_id uuid [pk]
  group_id uuid [not null]
  user_id uuid [not null]
  role group_role [not null]
  joined_at timestamp [not null]

  indexes {
    (group_id, user_id) [unique]
  }
}

Table queues {
  queue_id uuid [pk]
  group_id uuid [not null]
  created_by uuid [not null]
  title varchar(255) [not null]
  description text
  event_date timestamp [not null]
  reg_open timestamp [not null]
  reg_close timestamp [not null]
  max_size integer [not null]
  is_active boolean [not null]
  created_at timestamp [not null]
}

Table queue_entries {
  queue_entry_id uuid [pk]
  queue_id uuid [not null]
  user_id uuid [not null]
  position integer [not null]
  joined_at timestamp [not null]
  status queue_status [not null]

  indexes {
    (queue_id, user_id) [unique]
    (queue_id, position) [unique]
  }
}

Table notifications {
  notification_id uuid [pk]
  user_id uuid [not null]
  queue_id uuid [not null]
  type notification_type [not null]
  message text [not null]
  scheduled_at timestamp [not null]
  sent_at timestamp
  status notification_status [not null] 
  created_at timestamp [not null]
  }



Ref: groups.created_by > users.user_id
Ref: group_members.group_id > groups.group_id
Ref: group_members.user_id > users.user_id

Ref: queues.group_id > groups.group_id
Ref: queues.created_by > users.user_id

Ref: queue_entries.queue_id > queues.queue_id
Ref: queue_entries.user_id > users.user_id

Ref: notifications.user_id > users.user_id
Ref: notifications.queue_id > queues.queue_id